--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "axios": "^0.21.1",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "react-singleton-hook": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
